# mediapurge

./: .gitignore  DESIGN.md  README.md  config.yaml.example  deploy.sh  pyproject.toml
mediacleaner/: db.py  engine.py  maintenance.py  models.py  notify.py  scheduler.py
mediacleaner/clients/: medusa.py  ombi.py  plex.py  radarr.py  sonarr.py
mediacleaner/web/: app.py
mediacleaner/web/templates/: base.html  browse.html  config.html  confirm.html  dashboard.html  log.html  login.html  orphans.html  preview.html  rule_form.html  rule_form_v2.html  rules.html
mediapurge/: config.py  db.py  engine.py  maintenance.py  models.py  notify.py  scheduler.py
mediapurge/clients/: medusa.py  ombi.py  plex.py  radarr.py  sonarr.py
mediapurge/web/: app.py
mediapurge/web/templates/: base.html  browse.html  config.html  confirm.html  dashboard.html  log.html  login.html  orphans.html  preview.html  rule_form_v2.html  rules.html
